# yace

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-instances.ipynb  02-test-k-means++.ipynb  03-convex-solutions.ipynb  04-preliminary-results-take-1.ipynb  05-results-real-world-data-sets.ipynb  06-results-adv-instance.ipynb  07-results-adv-instance-coreset-sizes.ipynb  08-results-adv-instance-single-run.ipynb  09-results-instance-1.ipynb  10-results-instance-2.ipynb
yace/: calc_distortions.py  create_jobs.py  run.py  run_experiment.py  run_worker.py  test_gs.py
yace/algorithms/: sensitivity_sampling.py
yace/clustering/: kmeans.py
yace/coresets/: coreset.py  group_sampling.py  sampling.py  sensitivity_sampling.py  sensitivity_sampling_ex.py  uniform_sampling.py
yace/data/: prepare_real_world.py  synthetic.py
yace/experiments/: __init__.py  adv.py  rw.py  simple.py
yace/helpers/: evaluation.py
